fix padding overflow bug for searchbar at the smaller responsive design

--- a/src/components/pageheader/PageHeader.module.scss
+++ b/src/components/pageheader/PageHeader.module.scss
@@ -91,6 +91,12 @@
 		.BottomHeader {
 			flex-direction: column-reverse;
 			padding-bottom: 0.7em;
+			
+			.ProductSearch {
+				.MagnifyingGlassIconContainer {
+					padding: 0.18em 0.1em 0 0.3em;
+				}
+			}
 		}
 	}
 	
